# rust-env-info

./: README.md
.github/workflows/: ci.yml
crates/ai-env/: Cargo.toml  README.md
crates/ai-env/src/: antigravity.rs  api.rs  augment.rs  claude.rs  claude_cowork.rs  codex.rs  cursor.rs  cursor_cli.rs  devin.rs  gemini.rs  github_copilot.rs  lib.rs  opencode.rs  replit.rs  v0.rs
crates/cd-env/: Cargo.toml
crates/cd-env/src/: api.rs  aws_codedeploy.rs  coolify.rs  deno_deploy.rs  digital_ocean.rs  google_appengine.rs  google_cloud_run.rs  lib.rs  octopus.rs  vercel.rs
crates/ci-env/: Cargo.toml
crates/ci-env/src/: api.rs  appcircle.rs  aws_amplify.rs  aws_codebuild.rs  azure.rs  bitrise.rs  buddy.rs  circleci.rs  cloudflare_pages.rs  codemagic.rs  forgejo.rs  gitea.rs  gitlab.rs  google_cloud_build.rs  jenkins.rs  jenkins_x.rs  lib.rs  netlify.rs  sourcehut.rs  vela.rs  vercel.rs  woodpecker.rs
