[package]
name = "cd_env"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "Detect CD (deploy, deliver, distribute) information from the environment."
homepage = "https://github.com/milesj/rust-env-info"
repository = "https://github.com/milesj/rust-env-info"
keywords = ["cd", "deploy", "env", "info", "provider"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
