[package]
name = "ci_env"
version = "0.4.1"
edition = "2021"
license = "MIT"
description = "Detect CI information from the environment."
homepage = "https://github.com/milesj/rust-env-info"
repository = "https://github.com/milesj/rust-env-info"
keywords = ["ci", "env", "info", "provider"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
